k8s/service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: url-shortener-nodeport
  labels:
    app: url-shortener
spec:
  type: NodePort
  selector:
    app: url-shortener
    component: app
  ports:
    - name: http
      port: 9090
      targetPort: 9090
      nodePort: 30090
