k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: url-shortener
  labels:
    app: url-shortener
spec:
  type: LoadBalancer
  selector:
    app: url-shortener
    component: app
  ports:
    - name: http
      port: 80
      targetPort: 9090
